--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <a href="index.html" class="logo">
       <img src="img/logo.svg" alt="Studio Dentistico Sant'Andrea">
     </a>
+    
+    <button class="hamburger" aria-label="Menu" aria-expanded="false">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    
     <nav class="nav">
-      <button class="hamburger" aria-label="Menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
       <ul class="nav-list">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">Chi sono</a></li>
