--- a/404.html
+++ b/404.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagina non trovata | Studio Dentistico Sant'Andrea</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <header class="header">
   <div class="container">
     <a href="index.html" class="logo">
-      <img src="img/logo.svg" alt="Studio Dentistico Sant'Andrea">
+      <img src="assets/img/logo.svg" alt="Studio Dentistico Sant'Andrea">
     </a>
   </div>
 </header>
