--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 <body>
 <header class="header">
   <div class="container">
-    <a href="index.html" class="logo">
-      <img src="assets/img/logo.svg" alt="Studio Dentistico Sant'Andrea">
-    </a>
-    
-    <button class="hamburger" aria-label="Menu" aria-expanded="false">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
+    <div class="header-pre-mobile">
+      <a href="index.html" class="logo">
+        <img src="assets/img/logo.svg" alt="Studio Dentistico Sant'Andrea">
+      </a>
+
+      <button class="hamburger" aria-label="Menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
     
     <nav class="nav">
       <ul class="nav-list">
