--- a/index.html
+++ b/index.html
@@ -68,41 +68,57 @@
   </section>
 
 
-  <section id="about" class="section about-section">
-    <div class="container">
-      <div class="about-grid">
-        <div class="about-content">
-          <h2 class="section-title">Dott.ssa Grazia <br>Diodovich</h2>
+ <section id="about" class="section about-section">
+  <div class="container">
+    <div class="about-grid">
+      <!-- Colonna Immagine (tonda) -->
+      <div class="about-image">
+        <div class="profile-frame">
+          <img src="assets/img/dottoressa.jpg" alt="Dott.ssa Grazia Diodovich" class="profile-img">
+        </div>
+      </div>
 
-          <div class="about-text">
-            <p class="text-truncate">La Dott.ssa Grazia Diodovich opera presso lo Studio Dentistico Sant’Andrea con professionalità e passione, dedicandosi da oltre 30 anni alla salute orale dei suoi pazienti.
-              Crede in un approccio personalizzato, in cui ogni trattamento viene progettato su misura per rispondere alle esigenze specifiche di ciascun paziente, garantendo comfort e risultati duraturi.
-              Grazie a un costante aggiornamento sulle tecniche e tecnologie più innovative, la Dott.ssa Diodovich offre prestazioni odontoiatriche moderne, efficaci e orientate al benessere del paziente.</p>
+      <!-- Colonna Testo -->
+      <div class="about-content">
+        <h2 class="section-title">Dott.ssa Grazia Diodovich</h2>
+        
+        <div class="about-text">
+          <div class="professional-info">
+            <p><strong>Laurea in Odontoiatria e Protesi dentaria</strong><br>
+            Università degli Studi di Bari - 110 e lode</p>
 
-            <div class="text-more" style="display: none;">
-              <p>Laurea in Odontoiatria e Protesi dentaria conseguita all' Università degli studi di BARI con 110 e lode</p>
-              <p>Specializzazione in Chirurgia Odontostomatologica conseguita all'Università degli studi di TORINO con il massimo dei voti diversi corsi di perfezionamento:</p>
-              <p>Endodonzia conseguito all' Università degli studi di PESCARA</p>
-              <p>Medicina e Odontoiatria forense conseguito all' Università degli studi di PESCARA</p>
-              <p>Ortodonzia conseguito all 'Università degli studi di NAPOLI</p>
-              <p>Diploma di Omeopatia e omotossicologia conseguito all'Università di BARI , ROMA , e BADEN BADEN</p>
-              <p>Esercita la sua professione da quasi 30 anni con amore e cura.</p>
-            </div>
-
-            <button class="read-more-btn">Leggi di più</button>
+            <p><strong>Specializzazione in Chirurgia Odontostomatologica</strong><br>
+            Università degli Studi di Torino - Massimo dei voti</p>
           </div>
 
-          <div class="signature-container">
-            <div class="signature">Dott.ssa Grazia Diodovich </div>
+          <div class="qualifications">
+            <h3 class="qualification-title">Perfezionamenti:</h3>
+            <ul class="qualification-list">
+              <li><span class="qualification-name">Endodonzia</span> - Università di Pescara</li>
+              <li><span class="qualification-name">Medicina e Odontoiatria forense</span> - Università di Pescara</li>
+              <li><span class="qualification-name">Ortodonzia</span> - Università di Napoli</li>
+              <li><span class="qualification-name">Omeopatia e omotossicologia</span> - Università di Bari, Roma e Baden Baden</li>
+            </ul>
+          </div>
+
+          <div class="experience">
+            <p>Esercita la professione con <strong>passione e dedizione da oltre 30 anni</strong> presso lo Studio Dentistico Sant'Andrea, offrendo:</p>
+            <ul class="service-list">
+              <li>Approccio personalizzato</li>
+              <li>Tecnologie all'avanguardia</li>
+              <li>Cure complete e su misura</li>
+              <li>Massima attenzione al comfort</li>
+            </ul>
           </div>
         </div>
 
-        <div class="about-image">
-          <img src="assets/img/dottoressa.jpg" alt="Dott.ssa Grazia Diodovich " class="profile-img">
+        <div class="signature-container">
+          <div class="signature">Dott.ssa Grazia Diodovich</div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="services" class="section treatments-section">
     <div class="treatments-container">
@@ -418,11 +434,17 @@
 </div>
 </div>
 
+
+<div class="footer-qr">
+  <div class="qr-container">
+    <img src="assets/img/qr-code.png" alt="QR Code Contatti" class="qr-code">
+    <p>Scansiona per lasciare una recensione</p>
+  </div>
     <!-- Footer bottom -->
     <div class="footer-bottom">
       <div class="footer-legal">
         <p>&copy; 2025 Studio Dentistico Sant'Andrea. Tutti i diritti riservati.</p>
-        <p>P.IVA: 12345678901</p>
+        <p>P.IVA: 05947740725</p>
       </div>
     </div>
   </div>
