ultimate frontedn witouth information for service

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <body>
 <header class="header">
   <div class="container">
-    <a href="index.html" class="logo">
+    <a href="index.php" class="logo">
       <img src="assets/img/logo.svg" alt="Studio Dentistico Sant'Andrea">
     </a>
   </div>
@@ -24,7 +24,7 @@
         <h1>404</h1>
         <h2>Pagina non trovata</h2>
         <p>Sembra che la pagina che stai cercando non esista o sia stata spostata.</p>
-        <a href="index.html" class="btn btn-primary">Torna alla homepage</a>
+        <a href="index.php" class="btn btn-primary">Torna alla homepage</a>
       </div>
     </div>
   </section>
